# g2d

./: CHANGELOG.md  Cargo.toml  README.md
examples/: basic_image.rs  pixel_write.rs
examples/winit/: Cargo.toml
examples/winit/src/: main.rs
src/: canvas.rs  color.rs  context.rs  dimension.rs  error.rs  frame.rs  graphics.rs  lib.rs  paint.rs  pixels.rs  texture.rs  vec2.rs  vertex.rs  vertex_buffer.rs
src/handle/: mod.rs  window.rs  windowless.rs
src/math/: color.rs  dimension.rs  mod.rs
src/shaders/: paint_fill.wgsl
src/texture/: mod.rs  owned.rs
