[package]
name = "g2d"
description = "A simple library for hardware accelerated 2D rendering in Rust."
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pzipper/g2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-intrusive = "0.5.0"
wgpu = "0.18.0"

[dev_dependencies]
image = { version = "0.24.7", features = ["png"] }
