[package]
name = "g2d"
description = "A hardware-accelerated 2D graphics library written in pure Rust."
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/pzipper/g2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-intrusive = "0.5.0"
wgpu = "0.18"
raw-window-handle = "0.5.2" # TODO: support 0.6 when WGPU releases: https://github.com/gfx-rs/wgpu/pull/4202

[dev-dependencies]
futures = "0.3.29"
image = { version = "0.24.7", features = ["png"] }

[workspace]
members = ["examples/*"]
