[package]
name = "example-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
g2d = { path = "../../", version = "0.0.2" }
futures = "0.3.29"
winit = "0.28.7"
# image = { version = "0.24.7", features = ["png"] }
